--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,8 +9,7 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.2.1'
-    // noinspection DifferentKotlinGradleVersion
+    classpath 'com.android.tools.build:gradle:4.0.2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
@@ -136,5 +135,6 @@ dependencies {
   api 'com.facebook.react:react-native:+'
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-  implementation 'com.github.datalogic:datalogic-android-sdk:1.12'
+//  implementation 'com.github.datalogic:datalogic-android-sdk:1.12'
+  implementation 'com.github.datalogic:datalogic-android-sdk-selfshopping:v1.8a'
 }
