--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,5 @@
-DatalogicScanner_kotlinVersion=1.5.0
-DatalogicScanner_compileSdkVersion=28
-DatalogicScanner_buildToolsVersion=28.0.3
-DatalogicScanner_targetSdkVersion=28
+DatalogicScanner_kotlinVersion=1.6.10
+DatalogicScanner_compileSdkVersion=31
+DatalogicScanner_buildToolsVersion=30.0.1
+DatalogicScanner_targetSdkVersion=31
+android.useAndroidX=true
