--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:7.0.4'
+    classpath 'com.android.tools.build:gradle:7.2.2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
@@ -32,7 +32,7 @@ configurations.all {
 }
 
 android {
-  compileSdkVersion 'Datalogic:Datalogic SDK v1:29'
+  compileSdkVersion 'Datalogic:Datalogic SDK v1:30'
   defaultConfig {
     minSdkVersion 16
 //    targetSdkVersion getExtOrIntegerDefault('targetSdkVersion')
@@ -51,8 +51,8 @@ android {
     disable 'GradleCompatible'
   }
   compileOptions {
-    sourceCompatibility JavaVersion.VERSION_1_8
-    targetCompatibility JavaVersion.VERSION_1_8
+    sourceCompatibility JavaVersion.VERSION_11
+    targetCompatibility JavaVersion.VERSION_11
   }
 }
 
